--- a/backend/public/notes-demo.html
+++ b/backend/public/notes-demo.html
@@ -192,12 +192,19 @@
 
     async function quickDelete(id) {
       await apiCall('DELETE', `${API}/${id}`);
-      refreshNotes();
+      refreshNotes(true);
     }
 
-    async function refreshNotes() {
-      const data = await apiCall('GET', API);
-      if (data.notes) renderNotes(data.notes);
+    async function refreshNotes(silent = false) {
+      if (silent) {
+        // Silent refresh - don't log to response log
+        const res = await fetch(API);
+        const data = await res.json();
+        if (data.notes) renderNotes(data.notes);
+      } else {
+        const data = await apiCall('GET', API);
+        if (data.notes) renderNotes(data.notes);
+      }
     }
 
     async function createNote() {
@@ -210,7 +217,7 @@
         document.getElementById('deleteId').value = data.note.id;
         document.getElementById('title').value = '';
         document.getElementById('content').value = '';
-        refreshNotes();
+        refreshNotes(true);
       }
     }
 
@@ -226,13 +233,13 @@
       const id = document.getElementById('updateId').value.trim();
       if (!id) { alert('Please enter a Note UUID'); return; }
       const title = document.getElementById('updateTitle').value;
-      apiCall('PUT', `${API}/${id}`, { title }).then(() => refreshNotes());
+      apiCall('PUT', `${API}/${id}`, { title }).then(() => refreshNotes(true));
     }
 
     function deleteNote() {
       const id = document.getElementById('deleteId').value.trim();
       if (!id) { alert('Please enter a Note UUID'); return; }
-      apiCall('DELETE', `${API}/${id}`).then(() => refreshNotes());
+      apiCall('DELETE', `${API}/${id}`).then(() => refreshNotes(true));
     }
 
     function testInvalidId() { apiCall('GET', `${API}/not-a-valid-uuid`); }
